--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;500;600;700;800;900&display=swap');
 
+*, body, html {
+  padding: 0;
+  margin: 0;
+}
 body {
   margin: 0;
   font-family: "Poppins", "Segoe UI", "Roboto", "Oxygen",
